--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@nextui-org/react": "^1.0.0-beta.12",
+    "@swc/helpers": "^0.5.1",
     "aos": "^3.0.0-beta.6",
     "bootstrap": "^5.1.3",
     "eslint": "8.39.0",
