--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nextui-org/react": "^1.0.0-beta.12",
     "@swc/helpers": "^0.5.1",
     "aos": "^3.0.0-beta.6",
+    "axios": "^1.4.0",
     "bootstrap": "^5.1.3",
     "eslint": "8.39.0",
     "eslint-config-next": "13.4.3",
