--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@swc/helpers": "^0.5.1",
     "aos": "^3.0.0-beta.6",
     "axios": "^1.4.0",
-    "bootstrap": "^5.1.3",
     "eslint": "8.39.0",
     "eslint-config-next": "13.4.3",
+    "formik": "^2.2.9",
     "next": "13.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sass": "^1.62.1"
+    "react-player": "^2.12.0",
+    "sass": "^1.62.1",
+    "yup": "^1.1.1"
   }
 }
